--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ae7a6f">  <td>18/06/27 18:58:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="loginpagetest.login()[pri:0, instance:Testclasses.loginpagetest@4524411f]">login</td> 
-  <td>main@1157058691</td>   <td></td> </tr>
-<tr bgcolor="6d64ab">  <td>18/06/27 18:58:18</td>   <td>-9360</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Abstract.setUp()[pri:0, instance:Testclasses.loginpagetest@4524411f]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1157058691</td>   <td></td> </tr>
+<tr bgcolor="ae7a6f">  <td>18/06/27 19:32:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RecordMgntPageTest.clickOnAddButton()[pri:3, instance:Testclasses.RecordMgntPageTest@4524411f]">clickOnAddButton</td> 
+  <td>main@1765250898</td>   <td></td> </tr>
+<tr bgcolor="ae7a6f">  <td>18/06/27 19:32:08</td>   <td>-5124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RecordMgntPageTest.clickOnRecruitmentButton()[pri:2, instance:Testclasses.RecordMgntPageTest@4524411f]">clickOnRecruitmentButton</td> 
+  <td>main@1765250898</td>   <td></td> </tr>
+<tr bgcolor="ae7a6f">  <td>18/06/27 19:31:39</td>   <td>-34721</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RecordMgntPageTest.logintest()[pri:1, instance:Testclasses.RecordMgntPageTest@4524411f]">logintest</td> 
+  <td>main@1765250898</td>   <td></td> </tr>
+<tr bgcolor="6d64ab">  <td>18/06/27 19:31:27</td>   <td>-46139</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Abstract.setUp()[pri:0, instance:Testclasses.RecordMgntPageTest@4524411f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1765250898</td>   <td></td> </tr>
 </table>
